--- a/_posts/2024-05-24-llvm: ast(1).md
+++ b/_posts/2024-05-24-llvm: ast(1).md
@@ -363,6 +363,45 @@ public:
     bool Lex(Token &Tok);
 }
 
+/// 用于语义分析的全局符号表
+/// Holds long-lived AST nodes (such as types and decls) that can be
+/// referred to throughout the semantic analysis of a file.
+class ASTContext : public RefCountedBase<ASTContext> {
+    mutable llvm::ContextualFoldingSet<FunctionProtoType, ASTContext&> FunctionProtoTypes;
+}
+
+/// 作用域
+/// Scope - A scope is a transient data structure that is used while parsing the program.
+/// It assists with resolving identifiers to the appropriate declaration.
+class Scope {
+
+private: 
+    /// The parent scope for this scope.  
+    /// This is null for the translation-unit scope.
+    Scope *AnyParent;
+
+    /// Flags - This contains a set of ScopeFlags, which indicates how the scope
+    /// interrelates with other control flow statements.
+    unsigned Flags;
+
+    /// Depth - This is the depth of this scope.  The translation-unit scope has depth 0.
+    unsigned short Depth;
+
+    /// DeclsInScope - This keeps track of all declarations in this scope. 
+    /// When the declaration is added to the scope, it is set as the current
+    /// declaration for the identifier in the IdentifierTable.  When the scope is
+    /// popped, these declarations are removed from the IdentifierTable's notion
+    /// of current declaration.  It is up to the current Action implementation to
+    /// implement these semantics.
+    using DeclSetTy = llvm::SmallPtrSet<Decl *, 32>;
+    DeclSetTy DeclsInScope;
+
+    /// The DeclContext with which this scope is associated. 
+    /// For example, the entity of a class scope is the class itself, 
+    /// the entity of a function scope is a function, etc.
+    DeclContext *Entity;
+}
+
 /// Sema - This implements semantic analysis and AST building for C.
 class Sema final {
 public:
@@ -396,7 +435,7 @@ public:
     void EnterDeclaratorContext(Scope *S, DeclContext *DC);
     void ExitDeclaratorContext(Scope *S);
 
-    // 维护自身状态
+    // 检查语义
     void ActOnStartOfTranslationUnit();
     void ActOnEndOfTranslationUnit();
     void ActOnStartFunctionDeclarationDeclarator(Declarator &D, ...);
