--- a/_posts/2024-05-25-llvm: ast(2).md
+++ b/_posts/2024-05-25-llvm: ast(2).md
@@ -17,8 +17,13 @@ tags: llvm
 ```c++
 
 void Parser::Initialize() {
-    // Sema的各种callback
+    // 创建作用域
     EnterScope(Scope::DeclScope);
+    {
+        Actions.CurScope = new Scope(getCurScope(), ScopeFlags, ...);
+    }
+
+    // Sema的各种callback
     Actions.ActOnTranslationUnitScope(getCurScope());
     Actions.Initialize();
 
@@ -247,6 +252,10 @@ void Parser::ParseDeclarator(Declarator &D) {
 
             PastIdentifier:
                 if (Tok.is(tok::l_paren)) {
+                    // 作用域
+                    ParseScope PrototypeScope(this,
+                                Scope::FunctionPrototypeScope|Scope::DeclScope|Scope::FunctionDeclarationScope, ...);
+
                     // 检查小括号是否配对
                     BalancedDelimiterTracker T(*this, tok::l_paren);
                     T.consumeOpen();
@@ -280,6 +289,7 @@ void Parser::ParseDeclarator(Declarator &D) {
 
                                     IdentifierInfo *ParmII = ParmDeclarator.getIdentifier();
 
+                                    // 函数参数声明
                                     Decl *Param = Actions.ActOnParamDeclarator(..., ParmDeclarator, ...);
 
                                     ParamInfo.push_back(DeclaratorChunk::ParamInfo(ParmII, Param, ...));
@@ -290,6 +300,7 @@ void Parser::ParseDeclarator(Declarator &D) {
                         // If we have the closing ')', eat it.
                         Tracker.consumeClose();
 
+                        // 函数原型
                         D.AddTypeInfo(DeclaratorChunk::getFunction(...));
                     }
                     Actions.ActOnFinishFunctionDeclarationDeclarator(D);
@@ -327,6 +338,7 @@ Decl *Parser::ParseFunctionDefinition(ParsingDeclarator &D, ...) {
     if (Tok.isNot(tok::l_brace))
         return nullptr;
 
+    // 函数body作用域
     ParseScope BodyScope(this, ...);
 
     // 由Sema生成函数定义
@@ -626,110 +638,11 @@ StmtResult Parser::ParseStatement(...) {
 
 ```
 
-## 语义分析
-
-```c++
-
-// 定义声明
-Decl *Sema::ActOnDeclarator(Scope *S, Declarator &D) {
-    Decl *Dcl = HandleDeclarator(S, D, MultiTemplateParamsArg());
-    {
-        // 查找作用域内是否定义过
-        DeclarationNameInfo NameInfo = GetNameForDeclarator(D);
-        LookupResult Previous(*this, NameInfo, ...);
-        LookupName(Previous, S, ...);
-
-        TypeSourceInfo *TInfo = GetTypeForDeclarator(D);
-        DeclContext *DC = CurContext;
-
-        NamedDecl *New;
-        if (D.getDeclSpec().getStorageClassSpec() == DeclSpec::SCS_typedef) {
-            New = ActOnTypedefDeclarator(S, D, DC, TInfo, Previous);
-        } else if (R->isFunctionType()) {
-            New = ActOnFunctionDeclarator(S, D, DC, TInfo, Previous, ...);
-        } else {
-            New = ActOnVariableDeclarator(S, D, DC, TInfo, Previous, ...);
-        }
-
-        // 加入作用域的符号表
-        PushOnScopeChains(New, S);
-
-        return New;
-    }
-
-    return Dcl;
-}
-
-// 变量声明
-NamedDecl *Sema::ActOnVariableDeclarator(Scope *S, Declarator &D, ...) {
-    QualType R = TInfo->getType();
-    DeclarationName Name = GetNameForDeclarator(D).getName();
-    IdentifierInfo *II = Name.getAsIdentifierInfo();
-
-    DeclSpec::SCS SCSpec = D.getDeclSpec().getStorageClassSpec();
-    StorageClass SC = StorageClassSpecToVarDeclStorageClass(D.getDeclSpec());
-
-    VarDecl *NewVD = VarDecl::Create(Context, DC, ..., II, R, TInfo, SC);
-
-    // 检查声明语句是否符合语义
-
-    return NewVD;
-}
-
-// 函数声明
-NamedDecl* Sema::ActOnFunctionDeclarator(Scope *S, Declarator &D, ...) {
-    // Copy the parameter declarations from the declarator D to the function declaration NewFD
-    SmallVector<ParmVarDecl*, 16> Params;
-
-    FunctionDecl *NewFD = CreateNewFunctionDecl(*this, D, DC, R, TInfo, SC, ...);
-    NewFD->setParams(Params);
-
-    // Handle attributes.
-    ProcessDeclAttributes(S, NewFD, D);
-
-    ProcessPragmaWeak(S, NewFD);
-
-    // 各种语义检查
-
-    return NewFD;
-}
-
-// 函数定义
-Decl * Sema::ActOnStartOfFunctionDef(Scope *FnBodyScope, Declarator &D, ...) {
-    Decl *DP = HandleDeclarator(ParentScope, D, TemplateParameterLists);
-    Decl *Dcl = ActOnStartOfFunctionDef(FnBodyScope, DP, SkipBody, BodyKind);
-    {
-        FunctionDecl *FD = cast<FunctionDecl>(D);
-        
-        // Enter a new function scope
-        PushFunctionScope();
-
-        ...
-
-        return D;
-    }
-
-    return dcl;
-}
-
-Decl *Sema::ActOnFinishFunctionBody(Decl *dcl, Stmt *Body, ...) {
-    FunctionScopeInfo *FSI = getCurFunction();
-    FunctionDecl *FD = dcl->getAsFunction();
-
-    FD->setBody(Body);
-
-    PopFunctionScopeInfo(ActivePolicy, dcl);
-
-    return dcl;
-}
-
-```
-
 ## 核心数据结构
 
 `AST`叫抽象语法树，顾名思义应该是个树形结构
 
-`Decl`的树形结构如下：clang/AST/DeclNodes.inc
+`Decl`的树形结构如下：`clang/AST/DeclNodes.inc`
 
 ```td
 
@@ -761,12 +674,12 @@ def TopLevelStmt : DeclNode<Decl>;
 
 ```
 
-`Stmt`和`Expr`的树形结构如下：clang/AST/StmtNodes.inc
+`Stmt`和`Expr`的树形结构如下：`clang/AST/StmtNodes.inc`
 
 ```td
 
 class StmtNode<StmtNode base, bit abstract = 0> : ASTNode, AttrSubject {
-	StmtNode Base = base;
+  StmtNode Base = base;
   bit Abstract = abstract;
 }
 
@@ -818,9 +731,7 @@ def ConditionalOperator : StmtNode<AbstractConditionalOperator>;
 def BinaryConditionalOperator : StmtNode<AbstractConditionalOperator>;
 def ImplicitCastExpr : StmtNode<CastExpr>;
 def ExplicitCastExpr : StmtNode<CastExpr, 1>;
-def CStyleCastExpr : StmtNode<ExplicitCastExpr>;
 def CompoundLiteralExpr : StmtNode<Expr>;
-def ExtVectorElementExpr : StmtNode<Expr>;
 def InitListExpr : StmtNode<Expr>;
 def ImplicitValueInitExpr : StmtNode<Expr>;
 def NoInitExpr : StmtNode<Expr>;
@@ -830,7 +741,6 @@ def ParenListExpr : StmtNode<Expr>;
 def VAArgExpr : StmtNode<Expr>;
 def GenericSelectionExpr : StmtNode<Expr>;
 def PseudoObjectExpr : StmtNode<Expr>;
-def SourceLocExpr : StmtNode<Expr>;
 
 // Wrapper expressions
 def FullExpr : StmtNode<Expr, 1>;
@@ -847,6 +757,9 @@ def GNUNullExpr : StmtNode<Expr>;
 
 ```
 
+以上可以看出`AST`的节点是由`Stmt`构成的，`Stmt`有两个特列: `DeclStmt`和`Expr`, 
+分别用于表示声明语句和表达式。
+
 核心数据结构:
 
 ```c++
@@ -859,13 +772,231 @@ public:
         #include "clang/AST/StmtNodes.inc"
     };
 
+    class StmtBitfields {
+        /// The statement class.
+        LLVM_PREFERRED_TYPE(StmtClass)
+        unsigned sClass : 8;
+    };
+    enum { NumStmtBits = 8 };
 
+    // 采用header+body的模式以节省内存
+    // 通过header里的各种bit来解释body
+    class IfStmtBitfields {
+        LLVM_PREFERRED_TYPE(StmtBitfields)
+        unsigned : NumStmtBits;
+
+        /// Whether this is a constexpr if, or a consteval if, or neither.
+        LLVM_PREFERRED_TYPE(IfStatementKind)
+        unsigned Kind : 3;
+
+        /// True if this if statement has storage for an else statement.
+        LLVM_PREFERRED_TYPE(bool)
+        unsigned HasElse : 1;
+
+        /// True if this if statement has storage for a variable declaration.
+        LLVM_PREFERRED_TYPE(bool)
+        unsigned HasVar : 1;
+
+        /// True if this if statement has storage for an init statement.
+        LLVM_PREFERRED_TYPE(bool)
+        unsigned HasInit : 1;
+
+        /// The location of the "if".
+        SourceLocation IfLoc;
+    };
+
+    class SwitchStmtBitfields {
+        ...
+    };
+
+    class WhileStmtBitfields {
+        ...
+    };
+
+    ...
+
+    union {
+        // Same order as in StmtNodes.td.
+        // Statements
+        StmtBitfields StmtBits;
+        NullStmtBitfields NullStmtBits;
+        CompoundStmtBitfields CompoundStmtBits;
+        LabelStmtBitfields LabelStmtBits;
+        AttributedStmtBitfields AttributedStmtBits;
+        IfStmtBitfields IfStmtBits;
+        SwitchStmtBitfields SwitchStmtBits;
+        WhileStmtBitfields WhileStmtBits;
+        DoStmtBitfields DoStmtBits;
+        ForStmtBitfields ForStmtBits;
+        GotoStmtBitfields GotoStmtBits;
+        ContinueStmtBitfields ContinueStmtBits;
+        BreakStmtBitfields BreakStmtBits;
+        ReturnStmtBitfields ReturnStmtBits;
+        SwitchCaseBitfields SwitchCaseBits;
+
+        // Expressions
+        ExprBitfields ExprBits;
+        ConstantExprBitfields ConstantExprBits;
+        PredefinedExprBitfields PredefinedExprBits;
+        DeclRefExprBitfields DeclRefExprBits;
+        FloatingLiteralBitfields FloatingLiteralBits;
+        StringLiteralBitfields StringLiteralBits;
+        CharacterLiteralBitfields CharacterLiteralBits;
+        UnaryOperatorBitfields UnaryOperatorBits;
+        UnaryExprOrTypeTraitExprBitfields UnaryExprOrTypeTraitExprBits;
+        ArrayOrMatrixSubscriptExprBitfields ArrayOrMatrixSubscriptExprBits;
+        CallExprBitfields CallExprBits;
+        CastExprBitfields CastExprBits;
+        BinaryOperatorBitfields BinaryOperatorBits;
+        InitListExprBitfields InitListExprBits;
+        ParenListExprBitfields ParenListExprBits;
+        GenericSelectionExprBitfields GenericSelectionExprBits;
+        PseudoObjectExprBitfields PseudoObjectExprBits;
+
+        // GNU Extensions.
+        StmtExprBitfields StmtExprBits;
+    };
+
+public:
+    // 允许指定实例的内存
+    void *operator new(size_t bytes, void *mem) noexcept { return mem; }
+}
+
+// 声明语句包含的声明
+class DeclGroupRef {
+    enum Kind { SingleDeclKind=0x0, DeclGroupKind=0x1, Mask=0x1 };
+
+    Decl* D = nullptr;
+}
+
+// 声明语句
+class DeclStmt : public Stmt {
+    DeclGroupRef DG;
+    SourceLocation StartLoc, EndLoc;
+}
+
+// 在对象末尾多分配部分内存
+template <typename BaseTy, typename... TrailingTys>
+class TrailingObjects : private trailing_objects_internal::TrailingObjectsImpl<...> {
+    template <typename T> 
+    const T *getTrailingObjects() const {
+        return this->getTrailingObjectsImpl(static_cast<const BaseTy *>(this), ...);
+    }
+
+    static const BaseTy * getTrailingObjectsImpl(const BaseTy *Obj, ...) {
+        return Obj;
+    }
+}
+
+/// IfStmt - This represents an if/then/else.
+class IfStmt final
+    : public Stmt,
+      private llvm::TrailingObjects<IfStmt, Stmt *, SourceLocation> {
+    
+    static IfStmt *Create(const ASTContext &Ctx, IfStatementKind Kind, 
+                          Stmt *Init, VarDecl *Var,
+                          Expr *Cond, Stmt *Then, Stmt *Else = nullptr);
+    {
+        bool HasElse = Else != nullptr;
+        bool HasVar = Var != nullptr;
+        bool HasInit = Init != nullptr;
+
+        // 计算末尾要多分配的内存
+        void *Mem = Ctx.Allocate(
+            totalSizeToAlloc<Stmt *, SourceLocation>(
+                NumMandatoryStmtPtr + HasElse + HasVar + HasInit, HasElse),
+            alignof(IfStmt));
+        
+        // 指定实例的内存
+        return new (Mem) IfStmt(Ctx, Kind, Init, Var, Cond, Then, EL, Else);
+        {
+            // 设置header
+            IfStmtBits.HasElse = Else != nullptr;
+            IfStmtBits.HasVar = Var != nullptr;
+            IfStmtBits.HasInit = Init != nullptr;
+
+            setStatementKind(Kind);
+
+            setCond(Cond);
+            setThen(Then);
+            if (HasElse)
+                setElse(Else);
+            if (HasVar)
+                setConditionVariable(Ctx, Var);
+            if (HasInit)
+                setInit(Init);
+        }
+    }
+
+    // 根据header计算offset
+    unsigned condOffset() const {
+        return InitOffset + hasInitStorage() + hasVarStorage();
+    }
+
+    const Expr *getCond() const {
+        return reinterpret_cast<Expr *>(getTrailingObjects<Stmt *>()[condOffset()]);
+    }
+
+    void setCond(Expr *Cond) {
+        getTrailingObjects<Stmt *>()[condOffset()] = reinterpret_cast<Stmt *>(Cond);
+    }
+}
+
+// 可以产生值的语句
+class ValueStmt : public Stmt {
+public:
+     const Expr *getExprStmt() const;
+     {
+        const Stmt *S = this;
+        do {
+            if (const auto *E = dyn_cast<Expr>(S))
+                return E;
+
+            if (const auto *LS = dyn_cast<LabelStmt>(S))
+                S = LS->getSubStmt();
+            else if (const auto *AS = dyn_cast<AttributedStmt>(S))
+                S = AS->getSubStmt();
+            else
+
+            llvm_unreachable("unknown kind of ValueStmt");
+        } while (isa<ValueStmt>(S));
+
+        return nullptr;
+     }
+}
+
+/// 表达式语句
+class Expr : public ValueStmt {
+    QualType TR;
+}
+
+// 二元表达式的header
+class BinaryOperatorBitfields {
+    LLVM_PREFERRED_TYPE(ExprBitfields)
+    unsigned : NumExprBits;
+
+    // 二元操作符类型
+    LLVM_PREFERRED_TYPE(BinaryOperatorKind)
+    unsigned Opc : 6;
+}
+
+// 二元表达式
+class BinaryOperator : public Expr {
+    enum { LHS, RHS, END_EXPR };
+    Stmt *SubExprs[END_EXPR];
+
+public:
+    // Opcode在header中
+    Opcode getOpcode() const {
+        return static_cast<Opcode>(BinaryOperatorBits.Opc);
+    }
 }
 
 ```
 
+## 语义分析
 
-## demo
+### demo
 
 示例程序如下:
 
@@ -1081,3 +1212,116 @@ int main(int argc, char** argv)
       `-IntegerLiteral 0x55555571f7d8 <col:12> 'int' 0
 
 ```
+
+下面以`func`为例分析语义分析以及`AST`产生的过程
+
+```c++
+
+// 创建全局作用域
+EnterScope(Scope::DeclScope);
+
+// 创建函数原型作用域, 源码处理到`int fun(`
+ParseScope PrototypeScope(this, Scope::FunctionPrototypeScope|Scope::DeclScope|Scope::FunctionDeclarationScope, ...);
+
+// 解析函数原型开始, 源码处理到`int fun(`
+void Sema::ActOnStartFunctionDeclarationDeclarator(Declarator &Declarator, ...) {
+    // 处理c++模板参数
+}
+
+// 开始解析函数参数, 源码处理到`int fun(int i`
+Decl *Sema::ActOnParamDeclarator(Scope *S, Declarator &D, ...) {
+    // 在当前作用域及其父作用域查找当前声明的变量名
+    IdentifierInfo *II = D.getIdentifier();
+    LookupResult R(*this, II, ...);
+    LookupName(R, S);
+
+    if (!R.empty()) {
+        // 标识符重定义
+        Diag(D.getIdentifierLoc(), diag::err_param_redefinition) << II;
+    }
+
+    // 创建参数声明语句
+    ParmVarDecl *New = CheckParameter(...);
+    {
+        New = ParmVarDecl::Create(...);
+    }
+
+    // 声明的变量加入当前作用域
+    S->AddDecl(New);
+}
+
+// 解析函数原型结束, 源码处理到`int fun(int i)`
+void Sema::ActOnFinishFunctionDeclarationDeclarator(Declarator &Declarator) {
+    // 处理c++模板参数
+}
+
+// 退出函数原型作用域
+PrototypeScope.Exit();
+
+// Enter a scope for the function body.
+ParseScope BodyScope(this, Scope::FnScope | Scope::DeclScope | Scope::CompoundStmtScope);
+
+// 解析函数body开始, 源码处理到`int fun(int i) {`
+Decl * Sema::ActOnStartOfFunctionDef(Scope *FnBodyScope, Declarator &D, ...) {
+    D.setFunctionDefinitionKind(FunctionDefinitionKind::Definition);
+
+    // 生成函数声明
+    Decl *DP = HandleDeclarator(ParentScope, D, TemplateParameterLists);
+    {
+        NamedDecl *New = ActOnFunctionDeclarator(S, D, DC, ...);
+        {
+            FunctionDecl *NewFD = FunctionDecl::Create(...);
+        }
+    }
+
+    Decl *Dcl = ActOnStartOfFunctionDef(FnBodyScope, DP, SkipBody, BodyKind);
+    {
+        FunctionDecl *FD = cast<FunctionDecl>(DP);
+        FD->setWillHaveBody();
+
+        PushFunctionScope();
+        PushDeclContext(FnBodyScope, FD);
+
+        // Introduce our parameters into the function scope
+        for (auto *Param : FD->parameters()) {
+            Param->setOwningFunction(FD);
+
+            // If this has an identifier, add it to the scope stack.
+            if (Param->getIdentifier()) {
+                PushOnScopeChains(Param, FnBodyScope);
+            }
+        }
+    }
+
+    return Dcl;
+}
+
+// 解析if语句
+ParseScope IfScope(this, Scope::DeclScope | Scope::ControlScope, ...);
+
+// 处理if的条件: `i == 0 || i == 1`
+Sema::ConditionResult Sema::ActOnCondition(Scope *S, ...) {
+
+}
+
+
+// return 1;
+StmtResult Sema::ActOnReturnStmt(...) {
+
+}
+
+// 函数body解析完毕
+StmtResult Sema::ActOnCompoundStmt(...) {
+
+}
+
+Decl *Sema::ActOnFinishFunctionBody(Decl *D, Stmt *BodyArg) {
+
+}
+
+```
+
+
+
+
+
