--- a/_posts/2024-10-20-ssh wsl2.md
+++ b/_posts/2024-10-20-ssh wsl2.md
@@ -4,7 +4,9 @@
 
 ### 添加端口转发
 
-`netsh interface portproxy add v4tov4 listenaddress=0.0.0.0 listenport=22 connectaddress=[IP] connectport=22`
+`netsh interface portproxy add v4tov4 listenaddress=0.0.0.0 listenport=22 connectaddress=172.24.187.75 connectport=22`
+
+`connectaddress = wsl/ifconfig/eth0`
 
 ### 查看现有的端口转发规则
 
@@ -12,4 +14,4 @@
 
 ### 删除端口转发规则
 
-`netsh interface portproxy delete v4tov4 listenport=8080 listenaddress=0.0.0.0`
+`netsh interface portproxy delete v4tov4 listenport=2222 listenaddress=0.0.0.0`
