--- a/_posts/2024-10-20-ssh wsl2.md
+++ b/_posts/2024-10-20-ssh wsl2.md
@@ -8,10 +8,37 @@
 
 `connectaddress = wsl/ifconfig/eth0`
 
-### 查看现有的端口转发规则
+### 查看现有的端口转发规则  
 
 `netsh interface portproxy show all`
 
 ### 删除端口转发规则
 
 `netsh interface portproxy delete v4tov4 listenport=2222 listenaddress=0.0.0.0`
+
+
+### wsl访问host端口以使用代理
+
+`ipconfig`查找wsl的InterfaceAlias
+`New-NetFirewallRule -DisplayName "WSL" -Direction Inbound  -InterfaceAlias "vEthernet (WSL (Hyper-V firewall))"  -Action Allow`
+
+### Clash Verge开启本地代理
+
+`netstat -ano | findstr ":7897"`检查是否监听`0:0:0:0:7897`
+打开`设置 -> Clash设置 -> 局域网连接`
+
+## 激活
+
+https://www.cnblogs.com/CnKker/p/15579766.html
+
+```
+
+slmgr.vbs /upk
+
+slmgr /ipk W269N-WFGWX-YVC9B-4J6C9-T83GX
+
+slmgr /skms kms.loli.best
+
+slmgr /ato
+
+```
